# FireBoyAndWaterGirl

./: .gitignore  CMakeLists.txt  Doxyfile
Client/: CMakeLists.txt  cmake_install.cmake
Client/include/button/: button_base.h
Client/include/event/: event_keyboard.h
Client/include/main/: game_structure.h
Client/include/manager/: manage_button.h  manage_key_event.h  manage_resource.h  manage_scene.h
Client/include/player/: player_base.h  player_fire_boy.h  player_water_girl.h
Client/include/resource/: resource_atlas.h  resource_definition.h
Client/include/scene/: component_base.h  scene_base.h  scene_level_base.h  scene_level_teaching.h  scene_main.h  scene_select_level.h  scene_setting.h
Client/include/util/: util_animation.h  util_camera.h  util_danejoe.h  util_font.h  util_log.h  util_parse_json.h  util_parse_sprite_sheet.h  util_timer.h  util_vector.h
Client/source/button/: button_base.cpp
Client/source/event/: event_keyborad.cpp
Client/source/main/: game_structure.cpp  main.cpp
Client/source/manager/: manage_button.cpp  manage_key_event.cpp  manage_resource.cpp  manage_scene.cpp
Client/source/player/: player_base.cpp  player_fire_boy.cpp  player_water_girl.cpp
Client/source/resource/: resource_atlas.cpp
Client/source/scene/: scene_base.cpp  scene_level_base.cpp  scene_level_teaching.cpp  scene_main.cpp  scene_select_level.cpp  scene_setting.cpp
Client/source/util/: util_animation.cpp  util_camera.cpp  util_log.cpp  util_parse_sprite_sheet.cpp  util_timer.cpp  util_vector.cpp
Server/: CMakeLists.txt  cmake_install.cmake
(+291 files in other folders)
